--- a/styles.css
+++ b/styles.css
@@ -51,9 +51,30 @@ textarea {
 }
 
 .footer {
-    position: fixed;
-    color: var(--seconday-text);
-    bottom: 0;
-    color: var(--seconday-text);
-    left: 40%;
-  }
+  margin-top: 10rem;
+  background-color: var(--primary-dark);
+  padding: 2rem 1rem;
+  text-align: center;
+  color: var(--seconday-text);
+}
+
+.list-non-bullet {
+  list-style: none;
+}
+
+.list-item-inline {
+  display: inline;
+  padding: 0rem 0.5rem;
+}
+
+.footer-icons {
+  max-width: 50px;
+}
+
+.link {
+  text-decoration: none;
+  padding: 0.5rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
